--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "sequelize": "^6.4.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.6"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5"
   }
 }
